# it-finance-test-task

./: README.md  pyproject.toml  task1.py  task2.py
