[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["darinabird <49818561+darinabird@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
